Code cleanup only
No functional changes